Add mobile stock movement flow
